# BotBox

./: .gitignore  botbox.db  main.py  pyproject.toml
api/models/: auth.py  files.py
api/routes/: __init__.py  auth.py  core.py  files.py
api/services/: file_service.py
config/: settings.py
db/: database.py  models.py  schema.py
src/: main.py
src/agents/: agent_cli.py
src/api/models/: __init__.py
src/api/routes/: auth.py  core.py  files.py
src/api/services/: file_service.py
src/config/: settings.py
src/db/: database.py  schema.py
src/utils/: auth.py  files.py
utils/: auth.py  hashing.py
